--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
           <div class="footer-bottom">
             <div class="container">
               <div class="row">
-                <<img src="images/logo-bottom.png" alt="my logo" class="center-block" />
+                <img src="images/logo-bottom.png" alt="my logo" class="center-block" />
 			 </div>
             </div>
           </div>
