--- a/index.html
+++ b/index.html
@@ -745,10 +745,10 @@
                 <a href="skype:owlyac?userinfo" data-hover="Skype">Skype</a>
               </li>
               <li class="twitter">
-                <a href="http://www.instagram.com/awle" data-hover="Instagram">Instagram</a>
+                <a href="http://www.instagram.com/awle" target="_blank" data-hover="Instagram">Instagram</a>
               </li>
               <li class="gplus">
-                <a href="http://www.linkedin.com/in/owlyac" data-hover="Linkedin">Linkedin</a>
+                <a href="http://www.linkedin.com/in/owlyac" target="_blank" data-hover="Linkedin">Linkedin</a>
               </li>
             </ul>
           </div>
