--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="w-content">
                       <p class="head-about">
                         Welcome to my life. <br>
-                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon, but willing to relocate anywhere in the globe. I am a passionate little owl, in love with beauty, simplicity and nature!
+                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon, but willing to relocate anywhere in the globe. I am a passionate little owl, in love with beauty, aesthetics and the human brain!
                       </p>
                       
                       <h5 class="name" style="color:#fd98a2;">
@@ -196,7 +196,7 @@
                   <span>Works</span>
                 </h3>
                 <p class="content-detail">
-                  As a young artist, I take interest in many artistic fields. I am in love with with photography, illustration, graphic design and cinema. I’m also very tech savvy and a passionate front-end web developer. <br><br>Here you can find a little preview of some of my recent works. <br><i>Contact me for more details.</i>
+                  As a young artist, I take interest in many artistic fields. I am in love with with photography, illustration, graphic design and cinema. I’m also very tech savvy and a passionate front-end web developer. <br><br>Here you can find a little preview of some of my recent works. <br>Check my <a href="https://www.behance.net/owlyac">Behance</a> for more detail.
                 </p>
               </div>
               <div class="col-md-9 content-right">
