--- a/index.html
+++ b/index.html
@@ -712,10 +712,10 @@
                   <div class="list-testimonial">
                     <div class="content-testimonial">
                       <h3 class="testi" style="font-family: 'GraphikLight', sans-serif;">
-                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.”
+                        “Andreia is the funniest person I've met so far. Talented and curious. Always in a good mood and always eager to help people out. She has a fascinating energy and a contagious sense of humor. Working with her was super.”
                       </h3>
                       <p class="people">
-                        Louis Tan, Digibrand
+                        Francisca Carminho, Quanto70
                       </p>
                     </div>
                   </div>
