--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
               <div class="wrap-hero-content">
                   <div class="hero-content">
-                    <h1>Available for Hire*</h1>
+                    <h1>I'm Andreia.</h1>
                     <br>
                     <span class="typed"></span>
                   </div>
