--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <div class="hero-content">
                     <h1>I'm Andreia.</h1>
                     <br>
-                    <span class="typed"></span>
+                    <!--span class="typed"></span-->
                   </div>
               </div>
               <div class="mouse-icon margin-20">
