--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
           <div class="container">
             <div class="row">
               <div class="wrap-hero-content">
-                  <div class="hero-content">
+                  <!--div class="hero-content">
                     <h1>I'm Andreia.</h1>
                     <br>
-                    <!--span class="typed"></span-->
-                  </div>
+                    <!--span class="typed"></span>
+                  </div-->
               </div>
               <div class="mouse-icon margin-20">
                 <div class="scroll"></div>
