--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             <a href="http://www.owly.pt" target="_blank">
               <span>Photography</span>
             </a>
+            <a href="http://www.behance.net/owlyac" target="_blank">
+              <span>Portfolio</span>
+            </a>
           </div>
         </nav>
 
