--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="wrap-hero-content">
                   <div class="hero-content">
                     <h1>I'm Andreia.</h1>
-                    <!--span class="typed"></span-->
+                    <span class="typed"></span>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
