--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon, but willing to relocate anywhere in the globe. I am a passionate little owl, in love with beauty, aesthetics and the human brain!
                       </p>
                       
-                      <h5 class="name" style="color:#fd98a2;">
+                      <h5 class="name" style="color:#966854;">
                         Andreia Coutinho
                       </h5>
                       <!--img alt="signature" src="images/"-->
