--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </a>
                   </li>
                   <li class="col-md-6">
-                    <a href="images/banner2.jpg"><img alt="image" src="images/banner2.jpg">
+                    <a href="images/branding.png"><img alt="image" src="images/branding.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
@@ -249,7 +249,7 @@
                     </a>
                   </li>
                   <li class="col-md-6">
-                    <a href="images/ilust.jpg"><img alt="image" src="images/ilust.jpg">
+                    <a href="images/ilust.png"><img alt="image" src="images/ilust.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
