--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="w-content">
                       <p class="head-about">
                         Welcome to my life. <br>
-                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon, but willing to relocate anywhere in the globe. I am a passionate little owl, in love with beauty, aesthetics and the human brain!
+                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon and willing to work remotely to everywhere in the globe. I am a passionate little owl, in love with beauty, aesthetics and the human brain!
                       </p>
                       
                       <h5 class="name" style="color:#966854;">
