--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                   <div class="wrap-about">
                     <div class="w-content">
                       <p class="head-about">
-                        Welcome to my life. <br>
-                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon and willing to work remotely to everywhere in the globe. I am a passionate little owl, in love with beauty, aesthetics and the human brain!
+                        Welcome to my (e-)life! <br>
+                        I am a portuguese graphic designer, front-end developer and photographer from the 90's. I am currently based in Lisbon and working remotely. I see myself as a curious little owl, in love with beauty, aesthetics, animals and the human brain.
                       </p>
                       
                       <h5 class="name" style="color:#966854;">
@@ -287,7 +287,7 @@
                   <span>What I do</span>
                 </h3>
                 <p class="content-detail">
-                  These are the fields for which you can hire me. And I'll be damn good, Wohoo!
+                  These are the fields for which you can hire me. And I'll be in the zone, Wohoo!
                 </p>
               </div>
               <div class="col-md-9 content-right">
@@ -330,7 +330,7 @@
                           FRONT-END 
                         </p>
                         <p class="text-grey">
-                          Yup! If you want, I can also develop your website for you and make it go live.
+                          I can also develop a website and make it go live. Yes, I can also work with FTP servers, wordpress, squarespace, github and etc.
                         </p>
                       </div>
                     </li>
@@ -360,7 +360,7 @@
                           POST-PRODUCTION
                         </p>
                         <p class="text-grey">
-                          I am known for being one of the best photo editors I know! Photoshop is my best friend. Plus, I can also work with video.
+                          I am known for being one of the best photo editors I know (ha ha)! Photoshop is my best friend. Plus, <br>I can also work with video.
                         </p>
                       </div>
                     </li>
@@ -374,7 +374,7 @@
                           ILLUSTRATION
                         </p>
                         <p class="text-grey">
-                          Drawing is something I love to. I illustrate covers, characters, portraits and so on. I take my time, but I can draw the world!
+                          Drawing is something I love to. I illustrate covers, characters, portraits and so on.
                         </p>
                       </div>
                     </li>
@@ -517,7 +517,7 @@
                   <span>Skills</span>
                 </h3>
                 <p class="content-detail">
-                  I work regularly with Adobe Software. I'm great with HTML, CSS and JQuery. For coding I like to use Sublime, and recently started using Sketch for digital works. But...I take 'google it' to the next level, so I can do everything!
+                  I work regularly with Adobe Software. I'm great with HTML, CSS and JQuery. For coding I like to use Sublime, and recently started using Sketch App for digital works. But...I take 'google it' to the next level, so I can do everything!
                 </p>
               </div>
               <div class="col-md-9 content-right">
@@ -533,7 +533,7 @@
                   </div>
                   <div class="skillbar" data-percent="85%">
                     <div class="title head-sm">
-                      Illustrator / Premier
+                      Illustrator / Premier / Sketch App
                     </div>
                     <div class="count-bar">
                       <div class="count"></div>
