--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                               2013 - 2015
                             </h2>
                             <p class="job">
-                              Remote Junior Designer
+                              Junior Designer (Remote)
                             </p>
                             <p class="company">
                               Brandlovers
@@ -459,7 +459,7 @@
                               2014 - NOW
                             </h2>
                             <p class="job">
-                              Designer / Front-end Developer
+                              Designer and Photographer
                             </p>
                             <p class="company">
                               Freelance
@@ -484,7 +484,7 @@
                               2015 - 2016
                             </h2>
                             <p class="job">
-                              Graphic Designer
+                              Graphic Designer and Web Developer (Remote)
                             </p>
                             <p class="company">
                               Digibrand
@@ -508,7 +508,7 @@
                               2016 - 2017
                             </h2>
                             <p class="job">
-                              Web Designer and Illustrator
+                              Web Designer and Illustrator (Remote)
                             </p>
                             <p class="company">
                               Rage Communications
@@ -532,7 +532,7 @@
                               2017 - Present
                             </h2>
                             <p class="job">
-                              Graphic Designer
+                              Graphic Designer (Remote)
                             </p>
                             <p class="company">
                               OCG Asia
