--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             <hr>
                             <div class="text-detail">
                               <p>
-                                I'm currently working remotely with this digital agency based in Singapore. I do most of their internal jobs and work for clients such as Shiseido Group, Shopavision and Bata.
+                                I'm currently working remotely with this digital agency based in Singapore. I do most of their internal jobs and work for clients such as Shiseido Group, Shopavision, Bata, Auolive and the F1 Grand Prix.
                               </p>
                             </div>
                           </div>
