--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                               2015 - 2016
                             </h2>
                             <p class="job">
-                              Graphic Designer and Web Developer (Remote)
+                              Web Designer and Developer (Remote)
                             </p>
                             <p class="company">
                               Digibrand
