--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="wrap-hero-content">
                   <div class="hero-content">
                     <h1>Hello, I'm Owly.</h1>
-                    <span class="typed"></span>
+                    <span class="typed" style="color:yellow;"></span>
                   </div>
               </div>
               <div class="mouse-icon margin-20">
