--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                           POST-PRODUCTION
                         </p>
                         <p class="text-grey">
-                          I am known for being one of the best photo editors I know (ha ha)! Photoshop is my best friend. Plus, <br>I can also work with video.
+                          I am known for being one of the best photo editors...I know (ha ha)! Photoshop is my best friend. Plus, <br>I can also work with video.
                         </p>
                       </div>
                     </li>
@@ -356,7 +356,7 @@
                           ILLUSTRATION
                         </p>
                         <p class="text-grey">
-                          Drawing is something I love to. I illustrate covers, characters, portraits and so on.
+                          Drawing is something I love to do. I illustrate covers, characters, portraits and so on.
                         </p>
                       </div>
                     </li>
