--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                         <div class="wrap-card">
                           <div class="card">
                             <h2 class="year">
-                              2017 - Present
+                              2017 - NOW
                             </h2>
                             <p class="job">
                               Graphic Designer (Remote)
