--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   <span>Works</span>
                 </h3>
                 <p class="content-detail">
-                  As a young artist, I take interest in many artistic fields. I am in love with photography, illustration, graphic design and cinema. I’m also very tech savvy and can do some front-end development. <br><br>Here you can find some of my recent works. These will direct you to my Behance. Check my complete <a href="https://www.behance.net/owlyac" target="_blank"style="color:#BD4B43;">profile</a> for more.
+                  As a visual artist, I take interest in many artistic fields. I am in love with photography, illustration, graphic design and cinema. I’m also very tech savvy and can do some front-end development. <br><br>Here you can find some of my recent works. These will direct you to my Behance. Check my complete <a href="https://www.behance.net/owlyac" target="_blank"style="color:#BD4B43;">profile</a> for more.
                 </p>
               </div>
               <div class="col-md-9 content-right">
