--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         I am a portuguese graphic designer, photographer and front-end developer. I am mainly based in Lisbon, but I like to wander around the globe while working remotely. Travel and design are my major passions in life, so being a digital nomad is a very rewarding lifestyle for me. I see myself as a curious little owl, in love with aesthetics and the human brain. Besides that, I am an animal rights activist. &#x1F43C;
                       </p>
                       
-                      <h5 class="name" style="color:#BD4B43;">
+                      <h5 class="name" style="color:#ff6f16;">
                         Andreia Coutinho
                       </h5>
                       <!--img alt="signature" src="images/"-->
@@ -188,7 +188,7 @@
                   <span>Works</span>
                 </h3>
                 <p class="content-detail">
-                  As a visual artist, I take interest in many artistic fields. I am in love with photography, illustration, graphic design and cinema. I’m also very tech savvy and can do some front-end development. <br><br>Here you can find some of my recent works. These will direct you to my Behance. Check my complete <a href="https://www.behance.net/owlyac" target="_blank"style="color:#BD4B43;">profile</a> for more.
+                  As a visual artist, I take interest in many artistic fields. I am in love with photography, illustration, graphic design and cinema. I’m also very tech savvy and can do some front-end development. <br><br>Here you can find some of my recent works. These will direct you to my Behance. Check my complete <a href="https://www.behance.net/owlyac" target="_blank"style="color:#ff6f16;">profile</a> for more.
                 </p>
               </div>
               <div class="col-md-9 content-right">
