--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
                   
 
-                     <li class="col-md-6">
+                     <!--li class="col-md-6">
                     <a href="https://www.behance.net/gallery/50288859/Citi-Digital-Vault" target="_blank"><img alt="image" src="images/citi.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
@@ -268,7 +268,7 @@
                         </div>
                       </div>
                     </a>
-                  </li>
+                  <li-->
                 
                 </ul>
                 <!--/.PORTFOLIO IMAGE END-->
